src/objects/WeFormObject__c.object
<CustomObject>
    <fields>
        <fullName>PG_Residential_State__c</fullName>
        <description>Residential State of authorized officer/guarantor</description>
        <label>Residential State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_Residential_Street_Address__c</fullName>
        <description>Residential Street Address of authorized officer/guarantor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Residential Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Residential_Zip__c</fullName>
        <description>Residential Zip of authorized officer/guarantor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_SSN__c</fullName>
        <description>SSN of authorized officer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Social Security Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paperless_Flag__c</fullName>
        <label>Paperless Billing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Company__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Sales_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Sales Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>The applicant&apos;s choice for payment method</description>
        <inlineHelpText>Pick your prefered payment method</inlineHelpText>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlusCheks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PlusCheks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Info__c</fullName>
        <description>Store multi-partner program info</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>WeFormsObjects</relationshipLabel>
        <relationshipName>WeFormsObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotional_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Promotional Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Sales Rep associated with this Application</description>
        <label>SalesRep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WeFormsObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Same_as_Business_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as Company Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saved_For_Later_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Saved For Later Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Saved_For_Later_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Saved For Later Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer_s_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Signer&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Signer_s_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Signer&apos;s First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer_s_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Signer&apos;s Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer_s_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Signer&apos;s Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_Event_Type__c</fullName>
        <label>TM Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACCOUNT_CREATION</fullName>
                    <default>true</default>
                    <label>ACCOUNT_CREATION</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_Session_ID_Short__c</fullName>
        <formula>TRIM(LEFT( TM_Session_ID__c, 32))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TM Session ID Short</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Session_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TM Session ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Update_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TM Update Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taxpayer_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Taxpayer ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Drivers_Slip_Seat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Team Drivers / Slip Seat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title to map to online application object</description>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>Treasurer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WeFormObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeFormObject</label>
        <referenceTo>WeFormObject__c</referenceTo>
        <relationshipLabel>WeFormsObjects</relationshipLabel>
        <relationshipName>WeFormsObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_Established__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Year Established</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_in_Business__c</fullName>
        <label>Years in Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 12 months</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check from BOCA template if the PG fields should be displayed</description>
        <label>isPG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>message__c</fullName>
        <description>Hold system messages related to this record</description>
        <encryptionScheme>None</encryptionScheme>
        <label>message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>signer_title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Signer&apos;s Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>Identifier for weForm creation used to stop/allow triggers to run</description>
        <inlineHelpText>Identifier for weForm creation used to stop/allow triggers to run</inlineHelpText>
        <label>status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>partial</fullName>
                </value>
                <value>
                    <fullName>complete</fullName>
                </value>
                <value>
                    <fullName>test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>togglePG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use to toggle the default pg behaviour of the conditional pg BOCA</description>
        <inlineHelpText>Use to toggle the default pg behaviour of the conditional pg BOCA</inlineHelpText>
        <label>togglePG</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Company_Name__c</columns>
        <columns>City__c</columns>
        <columns>Email__c</columns>
        <columns>Employee_Id__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Taxpayer_ID__c</columns>
        <columns>TM_Event_Type__c</columns>
        <columns>TM_Session_ID__c</columns>
        <columns>TM_Update_Complete__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Company_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Online_Application_Status__c</columns>
        <columns>Application_Status__c</columns>
        <columns>NAME</columns>
        <columns>IPAddress__c</columns>
        <columns>Campaign_Program_ID__c</columns>
        <columns>TM_Session_ID__c</columns>
        <columns>TM_Event_Type__c</columns>
        <columns>TM_Session_ID_Short__c</columns>
        <columns>TM_Update_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>Opportunity__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Debug_Revolver</fullName>
        <columns>NAME</columns>
        <columns>Application_Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>isPG__c</columns>
        <columns>Date_of_Birth__c</columns>
        <columns>PG_SSN__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>TM_Session_ID__c</columns>
        <columns>IPAddress__c</columns>
        <columns>Location_Code__c</columns>
        <columns>Program__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>9/1/2015 12:00 AM</value>
        </filters>
        <label>Debug Revolver</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>WeObject_without_Oppty</fullName>
        <columns>Opportunity__c</columns>
        <columns>Program__c</columns>
        <columns>Company_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Online_Application_Status__c</columns>
        <columns>Application_Status__c</columns>
        <columns>NAME</columns>
        <columns>IPAddress__c</columns>
        <columns>Campaign_Program_ID__c</columns>
        <columns>TM_Session_ID__c</columns>
        <columns>TM_Event_Type__c</columns>
        <columns>TM_Session_ID_Short__c</columns>
        <columns>TM_Update_Complete__c</columns>
        <columns>status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>Opportunity__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>contains</operation>
            <value>ExxonMobil,CITGO,Circle</value>
        </filters>
        <label>WeObject without Oppty</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>Fleet_size_greater_than_1</fullName>
        <active>false</active>
        <errorConditionFormula>Fleet_Size__c &lt; 1</errorConditionFormula>
        <errorDisplayField>Fleet_Size__c</errorDisplayField>
        <errorMessage>Fleet size should be between 1 and 99999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Select_for_Authorize</fullName>
        <active>true</active>
        <description>Throw an error if select is opted</description>
        <errorConditionFormula>ISPICKVAL(Authorize__c, &quot;--Select--&quot;)</errorConditionFormula>
        <errorMessage>Please select Authorize</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Select_for_Fiscal_Year_Starts</fullName>
        <active>true</active>
        <description>Throw an error if select is opted</description>
        <errorConditionFormula>ISPICKVAL(Fiscal_Year_Starts__c, &quot;--Select--&quot;)</errorConditionFormula>
        <errorMessage>Please select Fiscal Year Starts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Select_for_Is_business_exempt</fullName>
        <active>true</active>
        <description>Throw an error if select is opted</description>
        <errorConditionFormula>ISPICKVAL( Is_business_exempt_from_Motor_Fuels_Tax__c, &quot;--Select--&quot;)</errorConditionFormula>
        <errorMessage>Please Select Is business exempt from Motor Fuels Tax</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Select_for_Legal_Structure</fullName>
        <active>true</active>
        <description>Throw an error if selected is opted</description>
        <errorConditionFormula>ISPICKVAL( Legal_Structure__c, &quot;--Select--&quot;)</errorConditionFormula>
        <errorDisplayField>Legal_Structure__c</errorDisplayField>
        <errorMessage>Please select Legal Structure</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Select_for_PGState</fullName>
        <active>true</active>
        <description>Throw an error if select is opted</description>
        <errorConditionFormula>ISPICKVAL(   PG_Residential_State__c   , &quot;--Select--&quot;)</errorConditionFormula>
        <errorMessage>Please select the State</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Select_for_State</fullName>
        <active>true</active>
        <description>Throw an error if select is opted</description>
        <errorConditionFormula>ISPICKVAL( Billing_State__c , &quot;--Select--&quot;)</errorConditionFormula>
        <errorMessage>Please select the Billing state</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Select_for_State2</fullName>
        <active>true</active>
        <description>Throw an error if select is opted</description>
        <errorConditionFormula>ISPICKVAL(State__c, &quot;--Select--&quot;)</errorConditionFormula>
        <errorMessage>Please select the State</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Select_for_State_for_How_did_you_hear</fullName>
        <active>true</active>
        <description>Throw an error if select is opted</description>
        <errorConditionFormula>ISPICKVAL( How_did_you_hear_about_this_offer__c, &quot;--Select--&quot;)</errorConditionFormula>
        <errorMessage>Please select How did you hear about this offer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Select_for_Years_in_Business</fullName>
        <active>true</active>
        <description>Throw an error if select is opted</description>
        <errorConditionFormula>ISPICKVAL(Years_in_Business__c, &quot;--Select--&quot;)</errorConditionFormula>
        <errorMessage>Please select Years in Business</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_Code_length</fullName>
        <active>false</active>
        <description>Makes sure that Length of the zip code is 5 or 9 digits</description>
        <errorConditionFormula>(LEN(Zip_code__c ) &gt; 5 &amp;&amp; LEN(Zip_code__c ) &lt; 10) || (LEN(Billing_Zip_Code__c ) &gt; 5 &amp;&amp; LEN(Billing_Zip_Code__c ) &lt; 10) || (LEN(PG_Residential_Zip__c ) &gt; 5 &amp;&amp; LEN(PG_Residential_Zip__c ) &lt; 10)</errorConditionFormula>
        <errorDisplayField>Zip_code__c</errorDisplayField>
        <errorMessage>Must be valid Zip Code</errorMessage>
    </validationRules>
</CustomObject>